# phonikud-phonemize-comparison

./: .gitignore  README.md  ilspeech_100_random.py  phonemize_wer.py  pyproject.toml
phonemizers/: charisiu.py  dicta_naive.py  dicta_phonikud.py  espeak.py  goruut.py  goruut_0_6_3.py  goruut_0_6_3_extra.py  naive_phonemizer.py  nakdimon_naive.py  nakdimon_phonikud.py  phonikud_naive.py  phonikud_phonemizer.py
